[tool.poetry]
name = "lib-sandbox"
version = "0.1.0"
description = "Песочница для исследования новых фреймворков и библиотек"
authors = ["Usmanov Timur <timurjudosambo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
gunicorn = "^22.0.0"
blacksheep = "^2.0.7"
django = "^5.0.6"
flask = "^3.0.3"
robyn = "^0.56.1"
litestar = "^2.9.1"
sanic = "^24.6.0"
falcon = "^3.1.3"
emmett = "^2.5.11"
starlette = "^0.37.2"
tornado = "^6.4.1"
aiohttp = "^3.9.5"
pyramid = "^2.0.2"
bottle = "^0.12.25"
cherrypy = "^18.10.0"
turbogears2 = "^2.4.3"
twisted = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
